<resources>
    <string name="app_name">GameTrading</string>


    <string name="illustrator">图鉴</string>
    <string name="forum">论坛</string>
    <string name="shop">交易区</string>
    <string name="shop_car">购物车</string>
    <string name="my">我的</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="AccountHint">手机号</string>
    <string name="Password">密码</string>
    <string name="RememberPwd">记住密码</string>
    <string name="AutoLogIn">自动登录</string>
    <string name="Register">注册</string>
    <string name="Login">登录</string>
    <string name="ConfirmPwd">再次输入密码</string>
    <string name="All_Forum">全部</string>
    <string name="Essence">精华</string>
    <string name="actionBar_edit">编辑</string>

    <string name="lv_header_hint_normal">下拉刷新</string>
    <string name="lv_header_hint_ready">松开刷新数据</string>
    <string name="lv_header_hint_loading">正在加载...</string>
    <string name="lv_header_last_time">上次更新时间：</string>
    <string name="lv_footer_hint_normal">查看更多</string>
    <string name="lv_footer_hint_ready">松开载入更多</string>

    <string name="Disclaimer01">1.所展示的商品供求信息由买卖双方自行提供，其真实性、准确性和合法性由信息发布者负责。</string>
    <string name="Disclaimer02">2.账号的真实情况以截图为准</string>
    <string name="Disclaimer03">3.国家法律规定，未成年人不能参与虚拟物品交易。</string>
</resources>
