<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RadioGroup
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/main_illustration"
            style="@style/tab_menu_item"
            android:text="@string/illustrator"
            android:drawableTop="@drawable/main_illustration"
            />
        <RadioButton
            android:id="@+id/main_forum"
            style="@style/tab_menu_item"
            android:text="@string/forum"
            android:drawableTop="@drawable/main_forum"
            />
        <RadioButton
            android:id="@+id/main_shop"
            style="@style/tab_menu_item"
            android:text="@string/shop"
            android:drawableTop="@drawable/main_shop"
            />
        <RadioButton
            android:id="@+id/main_shop_car"
            style="@style/tab_menu_item"
            android:text="@string/shop_car"
            android:drawableTop="@drawable/main_shop_car"
             />
        <RadioButton
            android:id="@+id/main_my"
            style="@style/tab_menu_item"
            android:text="@string/my"
            android:drawableTop="@drawable/main_my"
            />

    </RadioGroup>
        <View
            android:id="@+id/div_tab_bar"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_above="@id/navigation_bar"
            android:background="#f9d604"
            />
        <com.example.administrator.gametrading.util.myViewPager
            android:id="@+id/vpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/div_tab_bar"
            />
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>