<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        />

    <RelativeLayout
        android:id="@+id/register_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:padding="10dp">
        <Button
            android:id="@+id/register_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:background="@mipmap/back"
            />
        <!--APP_Name-->
        <TextView
            android:id="@+id/register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="25sp" />


        <!--账号-->
        <EditText
            android:id="@+id/register_user"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:drawableStart="@android:drawable/ic_menu_myplaces"
            android:drawableTint="@color/colorPrimary"
            android:hint="@string/AccountHint"
            android:inputType="textPersonName" />
        <LinearLayout
            android:id="@+id/msg"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            android:layout_below="@+id/register_user"
            android:layout_marginTop="2dp">

            <EditText
                android:id="@+id/register_msg"
                android:layout_width="200dp"
                android:drawableStart="@mipmap/pass"
                android:layout_height="wrap_content"
                android:hint="请输入验证码"
                android:inputType="textPassword" >
            </EditText>

            <Button
                android:id="@+id/register_msg_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/blue_enter_btn"
                android:text="获取验证码"
                android:textColor="#ffffff"/>
        </LinearLayout>

        <!--密码-->
        <EditText
            android:id="@+id/register_password"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/msg"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:drawableTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword" />
        <EditText
            android:id="@+id/register_pwd_confirm"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_below="@+id/register_password"
            android:hint="@string/ConfirmPwd" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="167dp"
            android:background="@drawable/blue_enter_btn"
            android:text="@string/Register"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

</RelativeLayout>
